Bug 816046 - Intermittent "Assertion failure: key.kind != CrossCompartmentKey::StringWrapper r=billm